--- a/apache/ports.conf
+++ b/apache/ports.conf
@@ -2,6 +2,8 @@
 # have to change the VirtualHost statement in
 # /etc/apache2/sites-enabled/000-default.conf
 
+NameVirtualHost *:80
+
 Listen 80
 
 <IfModule ssl_module>
